- P4A_DB::quote() method's 2nd param "autoquote" is now false by default,
  solving some problems with P4A_Data_Field::getSQLValue() and getSQLNewValue()
- when P4A_DB_Source needs a quoted value now it uses P4A_DB->quote() with
  autoquote turned on
- P4A_DB::quote() method, if autoquote param is on, always encloses the value
  within single quotes
- jQuery::form was updated to 2.0.8

2.99.9
- a bug with P4A_Field::getAsRadio() was solved (labels can be clicked now)
- P4A_Rmdir_Recursive() global function was added
- P4A_Data_Field::setSequence() method does not add the "_seq" postfix anymore
- P4A_DB::nextSequenceId() method adds the "_seq" postfix depending on the db you're using
- SQL dump for PostgreSQL was added to products_catalogue sample
- products_catalogue' SQL dump for MySQL was renamed to db_dump_mysql.sql
- P4A_Quote_SQL_Value() global function was removed
- P4A_DB::quote() method was added (it's a wrapper for Zend_DB quote method)
- P4A_DB::get*(), fetch*(), query*() methods now support the binding params array
- P4A_ROOT_PATH autodetection rules were changed a bit for Windows server compatibility
- P4A_Strip_Double_Backslashes() global function was added
- P4A_UPLOADS_DIR autodetection rules were changed a bit for Windows server compatibility
- P4A_Fieldset's label's CSS was changed for Safari 3.1 compatibility
- P4A_Label's CSS was changes a bit for cross-browser compatibility
- P4A_Field::getasText()'s CSS now has a default width (150px)
- a bug with P4A_I18N::mergeTranslation() method was solved
- FCKEditor was updated to 2.6
- jQuery::UI::datepicker was updated to 3.4.3
- javascript/css lazy loading was implemented, all widget depending js/css area loaded
  only when loosing a lot of KB on first run
- print CSS was removed
- translations were synched
- "Loading..." message can now be translated

2.99.8
- some minor changes were done after strict validation checks
- products_catalogue sample now has a "date" field to play with