@@ -10,6 +10,7 @@
 - P4A_DB::quote() method, if autoquote param is on, always encloses the value
   within single quotes
 - jQuery::form was updated to 2.0.8
+- jQuery::iFixPNG was updated to 2.1
 
 2.99.9
 - a bug with P4A_Field::getAsRadio() was solved (labels can be clicked now)
